# stepper-motor-mini

./: .gitignore  .gitmodules  README.md
firmware/: CMakeLists.txt  Modbus_Register.xlsx  build_fw.bat  demo_driver.py  flash.bat  test.py  寄存器表.xlsx
firmware/Core/Inc/: main.h  stm32f1xx_hal_conf.h
firmware/Core/Src/: gpio.c  main.c
firmware/Ctrl/Driver/: driver_base.h  tb67h450_base.cpp
firmware/Ctrl/Motor/: motor.cpp  motor.h
firmware/Ctrl/Signal/: button_base.cpp  led_base.cpp
firmware/Port/: tb67h450_stm32.cpp
firmware/UserApp/: common_inc.h  configurations.h  main.cpp
firmware/UserApp/protocols/: inferface_rs485.cpp  interface_can.cpp  interface_rs485.cpp  interface_uart.cpp
firmware/freemodbus/port/: port.h  portevent.c  portserial.c  porttimer.c
firmware/gd32f1x0/: CMakeLists.txt  jlink-flash-fw-standalone.jlink
firmware/gd32f1x0/Core/: adc.c  adc.h  gpio.c  gpio.h  main.c  main.h  spi.c  spi.h  tim.c  tim.h  usart.c  usart.h
firmware/gd32f1x0/GD32F1x0_Firmware_Library_V3.4.0/GD32F1x0_standard_peripheral/Include/: gd32f1x0_cec.h  gd32f1x0_cmp.h  gd32f1x0_crc.h  gd32f1x0_dac.h  gd32f1x0_dbg.h  gd32f1x0_dma.h  gd32f1x0_exti.h  gd32f1x0_fmc.h  gd32f1x0_fwdgt.h  gd32f1x0_gpio.h  gd32f1x0_i2c.h  gd32f1x0_misc.h  gd32f1x0_pmu.h  gd32f1x0_rcu.h  gd32f1x0_rtc.h  gd32f1x0_spi.h  gd32f1x0_syscfg.h  gd32f1x0_timer.h  gd32f1x0_tsi.h  gd32f1x0_usart.h  gd32f1x0_wwdgt.h
firmware/gd32f1x0/GD32F1x0_Firmware_Library_V3.4.0/GD32F1x0_standard_peripheral/Source/: gd32f1x0_adc.c  gd32f1x0_cec.c  gd32f1x0_cmp.c  gd32f1x0_crc.c  gd32f1x0_dac.c  gd32f1x0_dbg.c  gd32f1x0_dma.c  gd32f1x0_exti.c  gd32f1x0_fmc.c  gd32f1x0_fwdgt.c  gd32f1x0_gpio.c  gd32f1x0_i2c.c  gd32f1x0_misc.c  gd32f1x0_pmu.c  gd32f1x0_rcu.c  gd32f1x0_rtc.c  gd32f1x0_spi.c  gd32f1x0_syscfg.c  gd32f1x0_timer.c  gd32f1x0_tsi.c  gd32f1x0_usart.c  gd32f1x0_wwdgt.c
firmware/gd32f1x0/GD32F1x0_firmware/CMSIS/: core_cmFunc.h
firmware/gd32f1x0/Port/: button_gd32.cpp  button_gd32.h  encoder_calibrator_gd32.cpp  led_gd32.cpp  led_gd32.h  mt6816_gd32.cpp  mt6816_gd32.h  tb67h450_gd32.cpp  tb67h450_gd32.h
firmware/gd32f1x0/Port/Platform/: retarget.c  retarget.h  utils.c  utils.h
firmware/gd32f1x0/Port/Platform/Memory/: eeprom_interface.h  emulated_eeprom.cpp  emulated_eeprom.h  stockpile.c  stockpile.h  stockpile_config.h
firmware/gd32f1x0/system/: gd32f150g8u6.ld  gd32f1x0.h  gd32f1x0_it.c  gd32f1x0_libopt.h  startup_gd32f1x0.s  systick.c  systick.h
firmware/stm32f103/: CMakeLists.txt  jlink-flash-fw-standalone.jlink
firmware/stm32f103/Port/: button_stm32.cpp  encoder_calibrator_stm32.cpp  led_stm32.cpp  mt6816_stm32.cpp  (+1 more)
hardware/: Power.sch  fp-lib-table  stepper_motor-cache.lib  stepper_motor.pro  stepper_motor.sch  temp.sch
hardware/Libraries/: mylib.lib
hardware/gerber/: stepper_motor-Bottom_Mask.gbr  stepper_motor-Bottom_Paste.gbr  stepper_motor-Bottom_Silk.gbr  stepper_motor-PTH.drl
hardware/stepper-motor-20/: .gitignore  Power.kicad_sch  RS485.kicad_sch  fp-lib-table  stepper-motor-20.kicad_pcb  stepper-motor-20.kicad_pro  stepper-motor-20.kicad_sch  sym-lib-table  temp.kicad_sch
hardware/stepper-motor-28/: RS485.sch  ibom.html  stepper_motor.kicad_pcb  stepper_motor_BOM.csv  stepper_motor_POS.csv  sym-lib-table
(+54 files in other folders)
